--- a/src/app/auth/login/Login.css
+++ b/src/app/auth/login/Login.css
@@ -19,8 +19,18 @@
 
 .login-title {
     font-size: 1.5rem;
-    margin-bottom: 1.5rem;
     color: darkcyan;
+}
+
+.container-error-login {
+    height: 2.5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-error-login p {
+    color: red;
 }
 
 .login-form {
@@ -34,6 +44,8 @@
     border: 1px solid #ccc;
     border-radius: 8px;
     font-size: 1rem;
+    background-color: white;
+    color: black;
 }
 
 .login-buttons {
